--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -434,12 +434,10 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCCircularText_13.png&amp;filetimestamp=20210315204604&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_13.png" decoding="async" width="500" height="115" class="mw-file-element" data-file-width="500" data-file-height="115"></a></span>
 </p>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>   &nbsp;: Zamyka makro.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span>  &nbsp;: Resetuje wszystkie warto&#347;ci i wy&#347;wietla liczb&#281; znak&oacute;w widocznych w oknie.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>&nbsp;: Uruchamia makro i tworzy obiekt Compound ze wszystkich znak&oacute;w.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>    &nbsp;: Uruchamia makro.</li></ul>
-</div>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>: Zamyka makro.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span>: Resetuje wszystkie warto&#347;ci i wy&#347;wietla liczb&#281; znak&oacute;w widocznych w oknie.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>: Uruchamia makro i tworzy obiekt Compound ze wszystkich znak&oacute;w.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>: Uruchamia makro.</li></ul>
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Dost.C4.99pne_parametry"></span><span class="mw-headline" id="Dost&#281;pne_parametry">Dost&#281;pne parametry</span></h3>
@@ -973,13 +971,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181824
+Cached time: 20260121181837
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.505 seconds
-Real time usage: 1.508 seconds
-Preprocessor visited node count: 1526/1000000
+CPU time usage: 0.434 seconds
+Real time usage: 0.709 seconds
+Preprocessor visited node count: 1525/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -989,19 +987,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  999.534      1 -total
-  1.44%   14.430     10 Template:CheckBox
-  1.44%   14.416     10 Template:Code
-  1.37%   13.644      1 Template:Draft_Tools_navi/pl
-  1.00%    9.970      1 Template:Userdocnavi/pl
-  0.99%    9.881      7 Template:RadioButton
-  0.89%    8.940     14 Template:TRUE
-  0.72%    7.200      2 Template:Navigation_menu_2
-  0.71%    7.144      1 Template:Macro/pl
-  0.70%    7.015      6 Template:SpinBox
+100.00%  370.343      1 -total
+  2.27%    8.409      1 Template:Macro/pl
+  1.80%    6.679      1 Template:Codeextralink
+  1.72%    6.388      1 Template:Draft_Tools_navi/pl
+  1.68%    6.237      1 Template:Caption
+  1.67%    6.187     10 Template:Code
+  1.67%    6.182     10 Template:CheckBox
+  1.66%    6.162      6 Template:SpinBox
+  1.44%    5.330      7 Template:RadioButton
+  1.20%    4.452     18 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181822 and revision id 1742031. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181836 and revision id 1742033. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
