--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -444,7 +444,6 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <p>Niekt&oacute;re parametry s&#261; dost&#281;pne w ustawieniach FreeCAD, zobacz: <b>Menu &rarr; Narz&#281;dzia &rarr; Edytuj parametry</b>
 </p>
 <ul><li>Parametr u&#380;ytkownika: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
-<div class="mw-translate-fuzzy">
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
 <ul><li><code>false</code> tryb normalnego tekstu (i czarny), wy&#322;&#261;cza switchFontComBox</li>
 <li><code>true</code> pozwala na u&#380;ycie switchFontComBox 1 (domy&#347;lnie)</li></ul></li>
@@ -464,7 +463,6 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <li><code>setPositionTop</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>switchVersionSearch</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>Version</code>&nbsp;: wersja FCCircularText</li></ul></li></ul>
-</div>
 <p>Uruchom folder makr <b>FcString</b> dla utworzonych znak&oacute;w oraz plik <b>FcClock</b> dla utworzonych zegar&oacute;w.
 </p><p><span id="Script"></span>
 </p>
@@ -969,13 +967,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181845
+Cached time: 20260121181858
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.418 seconds
-Real time usage: 0.648 seconds
-Preprocessor visited node count: 1524/1000000
+CPU time usage: 0.433 seconds
+Real time usage: 0.833 seconds
+Preprocessor visited node count: 1523/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -985,19 +983,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  433.410      1 -total
-  2.57%   11.132      1 Template:Draft_Tools_navi/pl
-  1.75%    7.571      1 Template:Macro/pl
-  1.60%    6.928     10 Template:CheckBox
-  1.55%    6.711     14 Template:TRUE
-  1.40%    6.064     18 Template:FALSE
-  1.34%    5.806      6 Template:SpinBox
-  1.31%    5.695      7 Template:RadioButton
-  1.11%    4.815      1 Template:Codeextralink
-  1.11%    4.800     19 Template:Clear
+100.00%  487.025      1 -total
+  3.37%   16.428      1 Template:MenuCommand
+  2.60%   12.655      6 Template:SpinBox
+  1.65%    8.041      1 Template:Macro/pl
+  1.53%    7.440      3 Template:ColoredText
+  1.43%    6.951     10 Template:CheckBox
+  1.40%    6.839      7 Template:RadioButton
+  1.27%    6.201      1 Template:Draft_Tools_navi/pl
+  1.17%    5.722      1 Template:Codeextralink
+  1.08%    5.283      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181844 and revision id 1742035. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181857 and revision id 1742037. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
