--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -481,7 +481,6 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 </p><p><span id="Examples"></span>
 </p>
 <h2><span id="Przyk.C5.82ady"></span><span class="mw-headline" id="Przyk&#322;ady">Przyk&#322;ady</span></h2>
-<div class="mw-translate-fuzzy">
 <center>  
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
@@ -523,9 +522,7 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 </ul>  
 </center>  
 <p><br>
-</p>
-</div>
-<p><br>  
+</p><p><br>  
 </p>
 <center>  
 <ul class="gallery mw-gallery-traditional">
@@ -967,13 +964,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181858
+Cached time: 20260121181908
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.833 seconds
-Preprocessor visited node count: 1523/1000000
+CPU time usage: 0.417 seconds
+Real time usage: 0.539 seconds
+Preprocessor visited node count: 1522/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -983,19 +980,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  487.025      1 -total
-  3.37%   16.428      1 Template:MenuCommand
-  2.60%   12.655      6 Template:SpinBox
-  1.65%    8.041      1 Template:Macro/pl
-  1.53%    7.440      3 Template:ColoredText
-  1.43%    6.951     10 Template:CheckBox
-  1.40%    6.839      7 Template:RadioButton
-  1.27%    6.201      1 Template:Draft_Tools_navi/pl
-  1.17%    5.722      1 Template:Codeextralink
-  1.08%    5.283      1 Template:Caption
+100.00%  319.501      1 -total
+  1.69%    5.407      1 Template:Draft_Tools_navi/pl
+  1.61%    5.158      1 Template:Macro/pl
+  1.42%    4.532     10 Template:Code
+  1.41%    4.514     10 Template:CheckBox
+  1.23%    3.925      1 Template:Caption
+  1.18%    3.777     22 Template:Button
+  1.10%    3.522      7 Template:RadioButton
+  1.07%    3.426      3 Template:ColoredText
+  1.02%    3.245     14 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181857 and revision id 1742037. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181907 and revision id 1742039. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
