--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -598,8 +598,8 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_43.png&amp;filetimestamp=20160703181741&amp;.html" class="mw-file-description" title="Utw&oacute;rz tutaj swoj&#261; elips&#281; 100x50."><img alt="Utw&oacute;rz tutaj swoj&#261; elips&#281; 100x50." src="../File/FCCircularText_43.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Utw&oacute;rz tutaj swoj&#261; elips&#281; 100x50.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_43.png&amp;filetimestamp=20160703181741&amp;.html" class="mw-file-description" title="Utw&oacute;rz tutaj swoj&#261; elips&#281; o wymiarach 100 x 50."><img alt="Utw&oacute;rz tutaj swoj&#261; elips&#281; o wymiarach 100 x 50." src="../File/FCCircularText_43.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Utw&oacute;rz tutaj swoj&#261; elips&#281; o wymiarach 100 x 50.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
 			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_44.png&amp;filetimestamp=20160703181924&amp;.html" class="mw-file-description" title="Wyci&#261;gnij j&#261; na 50 mm."><img alt="Wyci&#261;gnij j&#261; na 50 mm." src="../File/FCCircularText_44.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
@@ -964,35 +964,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181908
+Cached time: 20260121181927
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.417 seconds
-Real time usage: 0.539 seconds
+CPU time usage: 0.419 seconds
+Real time usage: 0.636 seconds
 Preprocessor visited node count: 1522/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66939/5000000 bytes
+Unstrip post&#8208;expand size: 66981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  319.501      1 -total
-  1.69%    5.407      1 Template:Draft_Tools_navi/pl
-  1.61%    5.158      1 Template:Macro/pl
-  1.42%    4.532     10 Template:Code
-  1.41%    4.514     10 Template:CheckBox
-  1.23%    3.925      1 Template:Caption
-  1.18%    3.777     22 Template:Button
-  1.10%    3.522      7 Template:RadioButton
-  1.07%    3.426      3 Template:ColoredText
-  1.02%    3.245     14 Template:Incode
+100.00%  411.944      1 -total
+  2.95%   12.136      6 Template:SpinBox
+  2.30%    9.493      3 Template:ColoredText
+  1.93%    7.959      1 Template:Draft_Tools_navi/pl
+  1.58%    6.528     10 Template:Code
+  1.52%    6.267      1 Template:Caption
+  1.52%    6.244      1 Template:Macro/pl
+  1.51%    6.211      1 Template:Codeextralink
+  1.38%    5.672      1 Template:MenuCommand
+  1.17%    4.803     14 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181907 and revision id 1742039. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181926 and revision id 1742041. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
