--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -964,12 +964,12 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181927
+Cached time: 20260121181940
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.419 seconds
-Real time usage: 0.636 seconds
+CPU time usage: 0.397 seconds
+Real time usage: 0.693 seconds
 Preprocessor visited node count: 1522/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
@@ -980,19 +980,19 @@ Unstrip post&#8208;expand size: 66981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  411.944      1 -total
-  2.95%   12.136      6 Template:SpinBox
-  2.30%    9.493      3 Template:ColoredText
-  1.93%    7.959      1 Template:Draft_Tools_navi/pl
-  1.58%    6.528     10 Template:Code
-  1.52%    6.267      1 Template:Caption
-  1.52%    6.244      1 Template:Macro/pl
-  1.51%    6.211      1 Template:Codeextralink
-  1.38%    5.672      1 Template:MenuCommand
-  1.17%    4.803     14 Template:Incode
+100.00%  361.847      1 -total
+  4.52%   16.346      1 Template:Draft_Tools_navi/pl
+  3.29%   11.914      2 Template:Navigation_menu_2
+  1.76%    6.356      1 Template:Userdocnavi/pl
+  1.74%    6.286     10 Template:Code
+  1.39%    5.022      1 Template:Macro/pl
+  1.18%    4.259     10 Template:CheckBox
+  1.13%    4.074      7 Template:RadioButton
+  0.99%    3.567      1 Template:Codeextralink
+  0.85%    3.092     22 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181926 and revision id 1742041. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181939 and revision id 1742043. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
