--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -711,8 +711,8 @@ Tryb reliefu:
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_59.png&amp;filetimestamp=20160704123531&amp;.html" class="mw-file-description" title="Wybierz wyci&#261;gni&#281;t&#261; elips&#281;, obiekt po ci&#281;ciu (tekst) i wykonaj operacj&#281; scalania (Fuse)."><img alt="Wybierz wyci&#261;gni&#281;t&#261; elips&#281;, obiekt po ci&#281;ciu (tekst) i wykonaj operacj&#281; scalania (Fuse)." src="../File/FCCircularText_59.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Wybierz wyci&#261;gni&#281;t&#261; elips&#281;, obiekt po ci&#281;ciu (tekst) i wykonaj operacj&#281; scalania (Fuse).</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_59.png&amp;filetimestamp=20160704123531&amp;.html" class="mw-file-description" title="Wybierz wyci&#261;gni&#281;t&#261; elips&#281;, obiekt po ci&#281;ciu (tekst) i scal je."><img alt="Wybierz wyci&#261;gni&#281;t&#261; elips&#281;, obiekt po ci&#281;ciu (tekst) i scal je." src="../File/FCCircularText_59.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Wybierz wyci&#261;gni&#281;t&#261; elips&#281;, obiekt po ci&#281;ciu (tekst) i scal je.</div>
 		</li>
 </ul>
 </center>
@@ -964,35 +964,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121182006
+Cached time: 20260121182024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.527 seconds
-Real time usage: 2.551 seconds
+CPU time usage: 0.562 seconds
+Real time usage: 1.789 seconds
 Preprocessor visited node count: 1522/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 67041/5000000 bytes
+Unstrip post&#8208;expand size: 66963/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1834.072      1 -total
-  1.98%   36.345     10 Template:Code
-  1.92%   35.238      1 Template:Draft_Tools_navi/pl
-  1.37%   25.157      7 Template:RadioButton
-  1.27%   23.234      1 Template:Emphasis
-  1.19%   21.890     10 Template:CheckBox
-  1.00%   18.375      2 Template:Navigation_menu_2
-  0.97%   17.874      6 Template:SpinBox
-  0.88%   16.058      1 Template:Macro/pl
-  0.69%   12.712     22 Template:Button
+100.00% 1122.354      1 -total
+  1.60%   17.929      6 Template:SpinBox
+  1.42%   15.918      1 Template:Draft_Tools_navi/pl
+  1.24%   13.962     10 Template:Code
+  1.04%   11.688     10 Template:CheckBox
+  1.03%   11.593      3 Template:ColoredText
+  0.99%   11.107     14 Template:Incode
+  0.90%   10.110     19 Template:Clear
+  0.87%    9.751      1 Template:MenuCommand
+  0.84%    9.372     14 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182003 and revision id 1742047. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182022 and revision id 1742049. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
