--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -759,15 +759,9 @@ Tryb reliefu:
 </p><p><span id="Limitations"></span>
 </p>
 <h2><span class="mw-headline" id="Ograniczenia">Ograniczenia</span></h2>
-<div class="mw-translate-fuzzy">
 <p><i>Uwaga</i> mo&#380;e wyst&#261;pi&#263; b&#322;&#261;d mi&#281;dzy wersjami. Prosimy zg&#322;asza&#263; problem na forum i czeka&#263; na aktualizacj&#281; lub powr&oacute;ci&#263; do wcze&#347;niejszej wersji makra. Dzi&#281;kujemy.
-</p>
-</div>
-<div class="mw-translate-fuzzy">
-<p>Mo&#380;liwe jest, &#380;e dwa znaki mog&#261; si&#281; nak&#322;ada&#263;. Je&#347;li tak si&#281; stanie, dost&#281;pne jest obej&#347;cie problemu za pomoc&#261; makra <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_Rotate_To_Point">Rotate-To-Point</a>.
-</p>
-</div>
-<p><br>
+</p><p>Mo&#380;liwe jest, &#380;e dwa znaki mog&#261; si&#281; nak&#322;ada&#263;. Je&#347;li tak si&#281; stanie, dost&#281;pne jest obej&#347;cie problemu za pomoc&#261; makra <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_Rotate_To_Point">Rotate-To-Point</a>.
+<br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -964,13 +958,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121182024
+Cached time: 20260121182039
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.562 seconds
-Real time usage: 1.789 seconds
-Preprocessor visited node count: 1522/1000000
+CPU time usage: 0.414 seconds
+Real time usage: 0.562 seconds
+Preprocessor visited node count: 1520/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -980,19 +974,19 @@ Unstrip post&#8208;expand size: 66963/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1122.354      1 -total
-  1.60%   17.929      6 Template:SpinBox
-  1.42%   15.918      1 Template:Draft_Tools_navi/pl
-  1.24%   13.962     10 Template:Code
-  1.04%   11.688     10 Template:CheckBox
-  1.03%   11.593      3 Template:ColoredText
-  0.99%   11.107     14 Template:Incode
-  0.90%   10.110     19 Template:Clear
-  0.87%    9.751      1 Template:MenuCommand
-  0.84%    9.372     14 Template:TRUE
+100.00%  353.176      1 -total
+  0.94%    3.337     10 Template:Code
+  0.83%    2.935      1 Template:Macro/pl
+  0.74%    2.611      1 Template:Draft_Tools_navi/pl
+  0.67%    2.374     14 Template:TRUE
+  0.61%    2.147      3 Template:ColoredText
+  0.56%    1.963     10 Template:CheckBox
+  0.55%    1.942      7 Template:RadioButton
+  0.52%    1.828     22 Template:Button
+  0.48%    1.703      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182022 and revision id 1742049. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182039 and revision id 1742053. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
