--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -958,12 +958,12 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121182039
+Cached time: 20260121182038
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.414 seconds
-Real time usage: 0.562 seconds
+CPU time usage: 0.409 seconds
+Real time usage: 0.681 seconds
 Preprocessor visited node count: 1520/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
@@ -974,19 +974,19 @@ Unstrip post&#8208;expand size: 66963/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  353.176      1 -total
-  0.94%    3.337     10 Template:Code
-  0.83%    2.935      1 Template:Macro/pl
-  0.74%    2.611      1 Template:Draft_Tools_navi/pl
-  0.67%    2.374     14 Template:TRUE
-  0.61%    2.147      3 Template:ColoredText
-  0.56%    1.963     10 Template:CheckBox
-  0.55%    1.942      7 Template:RadioButton
-  0.52%    1.828     22 Template:Button
-  0.48%    1.703      1 Template:Codeextralink
+100.00%  431.663      1 -total
+  3.01%   13.009      6 Template:SpinBox
+  2.54%   10.954      1 Template:Draft_Tools_navi/pl
+  1.74%    7.510     10 Template:Code
+  1.31%    5.641      1 Template:Macro/pl
+  1.28%    5.519      2 Template:Navigation_menu_2
+  0.89%    3.836      1 Template:Userdocnavi/pl
+  0.84%    3.619      7 Template:RadioButton
+  0.77%    3.320      1 Template:Codeextralink
+  0.74%    3.206     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182039 and revision id 1742053. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182038 and revision id 1742053. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
