--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -30,15 +30,11 @@
 <p><span id="Attributes"></span>
 </p>
 <h4><span class="mw-headline" id="Attribute">Attribute</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li>format="NUMBER": Angabe des verwendeten package.xml-Formats. F&uuml;r diese Schnittstelle muss format="1" angegeben werden.</li>
-<li>xmlns="NAMESPACE": Gibt den XML-Namespace f&uuml;r dieses Paket an und muss genau wie oben gezeigt als Link zu  <a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a> eingef&uuml;gt werden.</li></ul>
-</div>
+<ul><li>format="NUMBER": Gibt die Version des verwendeten Formats an. Derzeit ist nur Version &bdquo;1&ldquo; verf&uuml;gbar.</li>
+<li>xmlns="NAMESPACE": Gibt den verwendeten XML-Namespace an. Muss auf "<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>" gesetzt werden.</li></ul>
 <p><span id="Required_Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Erforderliche_untergeordnete_Tags">Erforderliche untergeordnete Tags</span></h4>
-</div>
+<h4><span class="mw-headline" id="Erforderliche_Tags">Erforderliche Tags</span></h4>
 <div class="mw-translate-fuzzy">
 <p>Das oberste Element &lt;package&gt; muss mindestens die folgenden Tags enthalten:
 </p>
@@ -398,13 +394,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221003
+Cached time: 20260121221158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.322 seconds
-Preprocessor visited node count: 524/1000000
+CPU time usage: 0.070 seconds
+Real time usage: 0.175 seconds
+Preprocessor visited node count: 522/1000000
 Post&#8208;expand include size: 7541/2097152 bytes
 Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
@@ -414,17 +410,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  114.770      1 -total
- 25.89%   29.712      1 Template:Powerdocnavi/de
- 21.72%   24.929     37 Template:Incode
- 16.14%   18.522      3 Template:Version/de
- 13.25%   15.207      1 Template:Code
-  7.38%    8.469      1 Template:TOCright
-  4.19%    4.812      1 Template:Navigation_menu_2
-  3.56%    4.089      1 Template:MenuCommand
+100.00%   42.332      1 -total
+ 37.62%   15.927      1 Template:Powerdocnavi/de
+ 14.02%    5.934      1 Template:MenuCommand
+ 13.62%    5.767      1 Template:Navigation_menu_2
+ 12.57%    5.320      3 Template:Version/de
+  7.04%    2.980     37 Template:Incode
+  5.51%    2.332      1 Template:TOCright
+  4.75%    2.010      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221003 and revision id 1742117. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221157 and revision id 1742121. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
