--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -37,16 +37,14 @@
 <h4><span class="mw-headline" id="Erforderliche_Tags">Erforderliche Tags</span></h4>
 <p>Die folgenden Tags m&uuml;ssen im Element &lt;package&gt; vorhanden sein:
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
 <li><a href="#.3Cdate.3E">&lt;date&gt;</a></li>
 <li><a href="#.3Cdescription.3E">&lt;description&gt;</a></li>
-<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a> (mehrere, aber mindestens eine)</li>
-<li><a href="#.3Clicense.3E">&lt;license&gt;</a> (mehrere, aber mindestens eine)</li>
+<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a></li>
+<li><a href="#.3Clicense.3E">&lt;license&gt;</a></li>
 <li><a href="#.3Cicon.3E">&lt;icon&gt;</a></li>
-<li><a href="#.3Ccontent.3E">&lt;content&gt;</a> (Containerelement f&uuml;r Paketinhaltselemente)</li></ul>
-</div>
+<li><a href="#.3Ccontent.3E">&lt;content&gt;</a></li></ul>
 <p><span id="Optional_Tags"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -392,13 +390,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221214
+Cached time: 20260121221236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.310 seconds
-Preprocessor visited node count: 521/1000000
+CPU time usage: 0.069 seconds
+Real time usage: 0.266 seconds
+Preprocessor visited node count: 520/1000000
 Post&#8208;expand include size: 7541/2097152 bytes
 Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
@@ -408,17 +406,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  113.359      1 -total
- 36.52%   41.400      1 Template:Powerdocnavi/de
- 20.96%   23.755     37 Template:Incode
- 20.35%   23.071      1 Template:Code
- 15.82%   17.932      1 Template:Navigation_menu_2
-  7.51%    8.518      3 Template:Version/de
-  4.27%    4.845      1 Template:TOCright
-  3.99%    4.525      1 Template:MenuCommand
+100.00%   54.391      1 -total
+ 32.83%   17.855      1 Template:Powerdocnavi/de
+ 21.99%   11.962     37 Template:Incode
+ 12.83%    6.977      3 Template:Version/de
+ 11.45%    6.228      1 Template:Navigation_menu_2
+  7.78%    4.231      1 Template:TOCright
+  6.07%    3.300      1 Template:MenuCommand
+  5.54%    3.014      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221213 and revision id 1742123. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221236 and revision id 1742125. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
