--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -47,9 +47,7 @@
 <li><a href="#.3Ccontent.3E">&lt;content&gt;</a></li></ul>
 <p><span id="Optional_Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Optionale_untergeordnete_Tags">Optionale untergeordnete Tags</span></h4>
-</div>
+<h4><span class="mw-headline" id="Optionale_Tags">Optionale Tags</span></h4>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Curl.3E">&lt;url&gt;</a> (mehrere)</li>
 <li><a href="#.3Cauthor.3E">&lt;author&gt;</a> (mehrere)</li>
@@ -390,13 +388,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221236
+Cached time: 20260121221247
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.266 seconds
-Preprocessor visited node count: 520/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 519/1000000
 Post&#8208;expand include size: 7541/2097152 bytes
 Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
@@ -406,17 +404,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.391      1 -total
- 32.83%   17.855      1 Template:Powerdocnavi/de
- 21.99%   11.962     37 Template:Incode
- 12.83%    6.977      3 Template:Version/de
- 11.45%    6.228      1 Template:Navigation_menu_2
-  7.78%    4.231      1 Template:TOCright
-  6.07%    3.300      1 Template:MenuCommand
-  5.54%    3.014      1 Template:Code
+100.00%   37.630      1 -total
+ 35.37%   13.309      1 Template:Powerdocnavi/de
+ 14.03%    5.279      3 Template:Version/de
+ 12.75%    4.798     37 Template:Incode
+  9.14%    3.439      1 Template:TOCright
+  9.06%    3.409      1 Template:Navigation_menu_2
+  8.49%    3.193      1 Template:Code
+  8.37%    3.148      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221236 and revision id 1742125. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221246 and revision id 1742127. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
